# Black-Flipper-firmware

./: CMakeLists.txt  README.md  sdkconfig.defaults
components/config/: CMakeLists.txt
components/config/include/: app_config.h
components/drivers/: CMakeLists.txt  battery.c  cc1101.c  ir.c  max_m8q.c  pn532.c  st7796s.c  sx1262.c  w25q128.c
components/drivers/include/: battery.h  cc1101.h  ir.h  max_m8q.h  pn532.h  st7796s.h  sx1262.h  w25q128.h
components/system/: CMakeLists.txt  event_bus.c  task_manager.c
components/system/include/: event_bus.h  task_manager.h
components/ui/: CMakeLists.txt  ui_manager.c
components/ui/include/: screens.h  ui_manager.h
docs/: DESIGN.md
main/: CMakeLists.txt  app_config.h  main.c
